--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -2,7 +2,49 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginRight="10dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginTop="10dp"
     android:orientation="vertical" >
     
-
+	<TextView 
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:text="@string/state"/>
+	<Spinner
+	    android:layout_marginTop="10dp"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:entries="@array/states"
+	    android:id="@+id/spinner_states"
+	    />
+	<TextView 
+	    android:layout_width="match_parent"
+	    android:layout_marginTop="15dp"
+	    android:layout_height="wrap_content"
+	    android:text="@string/domain"/>
+	<Spinner
+	    android:layout_marginTop="10dp"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:entries="@array/domains"
+	    android:id="@+id/spinner_domains"
+	    />
+	<TextView 
+	    android:layout_width="match_parent"
+	    android:layout_marginTop="15dp"
+	    android:layout_height="wrap_content"
+	    android:text="@string/indicator"/>
+	<Spinner
+	    android:layout_marginTop="10dp"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:id="@+id/spinner_indicators"
+	    />
+	<Button 
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:padding="5dp"
+	    android:layout_margin="15dp"
+	    android:text="@string/search"/>
 </LinearLayout>
