--- a/res/layout/twitter_feed.xml
+++ b/res/layout/twitter_feed.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-    <Button 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Login"
-        android:id="@+id/login_twitter"/>
-
-</LinearLayout>
+    android:orientation="vertical"
+    android:background="#E0E0E0">
+    <ListView 
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/tweets_list"
+        android:divider="@android:color/transparent"
+        android:layout_margin="5dp"
+        android:visibility="gone"
+        android:dividerHeight="5dp"/>
+</RelativeLayout>
