--- a/res/layout/activity_graph.xml
+++ b/res/layout/activity_graph.xml
@@ -4,5 +4,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
-
+    <WebView 
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="horizontal"
+        android:id="@+id/result_webview"/>
 </LinearLayout>
